tests/machine/x/ocaml/group_items_iteration.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/group_items_iteration.ml", line 23, characters 51-54:
23 |     type record1 = { mutable tag : string; mutable val : int }
                                                        ^^^
Error: Syntax error


Context (around line 23):
  21 |     type ('k,'v) group = { key : 'k; items : 'v list }
  22 | 
  23 |     type record1 = { mutable tag : string; mutable val : int }
  24 |     type record2 = { mutable tag : Obj.t; mutable total : Obj.t }
  25 | 
